@@ -7,5 +7,6 @@ GMP.bs
 XS.c
 *.o
 *.obj
+*.dSYM
 blib*
 pm_to_blib
